Revert "feat: created business divisions screens (STATIC DATA)"

--- a/client/src/assets/scss/costofSalesRegistration.scss
+++ b/client/src/assets/scss/costofSalesRegistration.scss
@@ -1,358 +1,7 @@
-.costOfSalesRegistration_wrapper{
-    display: flex;
-    flex-direction: column;
-    .costOfSalesRegistration_header_cont{
-        margin-left: 5%;
-        height: 60px;
-        display: flex;
-        justify-content: space-between;
-        .header_container{
-            background-color: #fff;
-            padding: 5px 5px 10px 5px;
-            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        }
-        .costOfSalesRegistration_header-buttons{
-            display: flex;
-            gap: 30px;
-            .header-btn{                        
-                margin-top: 15px;
-                border: 1px solid #808080;
-                width: 12rem;
-                height: 30px;
-                border-radius: 5px !important;
-                background-color: #fff;
-                color: #000;
-            }
-            .header-btn:hover{
-                background-color: #808080;
-                color: #fff;
-            }
-            .h-btn-active{
-                background-color: #808080;
-                color: #fff;
-            }
-        }
-        .costOfSalesRegistration_language-toggle{
-            gap: 10px;
-            display: flex;
-            padding-right: 50px;
-            align-items: center;
-            .costOfSalesRegistration_pl-label{
-                display: inline-block;
-            }
-            .costOfSalesRegistration_switch{
-                margin-top: 2px;
-                position: relative;
-                display: inline-block;
-                width: 40px;
-                height: 20px;
-                margin-left: 2px;
-                input{
-                    opacity: 0;
-                    width: 0;
-                    height: 0;
-  
-                    &:checked + .costOfSalesRegistration_slider {
-                      background-color: #2196F3;
-                    }
-  
-                    &:focus + .costOfSalesRegistration_slider {
-                      box-shadow: 0 0 1px #2196F3;
-                    }
-  
-                    &:checked + .costOfSalesRegistration_slider:before {
-                      transform: translateX(20px);
-                    }
-                }
-                .costOfSalesRegistration_slider{
-                    position: absolute;
-                    cursor: pointer;
-                    height: 21px;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    bottom: 0;
-                    background-color: #ccc;
-                    border-radius: 10px;
-                    transition: background-color 0.4s;
-                    &:before {
-                      position: absolute;
-                      content: "";
-                      height: 16px;
-                      width: 16px;
-                      left: 2px;
-                      bottom: 2px;
-                      background-color: #fff;
-                      border-radius: 50%;
-                      transition: transform 0.4s;
-                    }
-                }
-            }
-        }
-    }
-    .costOfSalesRegistration_content_wrapper{
-        display: flex;
-        background-color: #EFEDEA;
-        @media only screen and (max-width: 1000px){
-            flex-direction: column;
-        }
-        .costOfSalesRegistration_sidebar{
-            flex: 0 0 205px;
-            background-color: #1c302c;
-            @media only screen and (max-width: 1000px){
-                flex: 0 0 auto;
-                width: 100%;
-                display: none;
-            }
-        }
-        .costOfSalesRegistration_data_content{
-            width: 100%;
-            height: 100vh;
-            margin: 10px 30px 10px 30px;
-            border: 1px solid #fff;
-            border-radius: 5px;
-            background-color: #fff;
-            .costOfSalesRegistration_top_body_cont{
-                background-color: #fff;
-                height: 4rem;
-            }
-            .costOfSalesRegistration_mid_body_cont{
-                background-color: #fff;
-                max-height: 670px;
-                overflow-y: auto; 
-                overflow-x: hidden;
-                scrollbar-width: none;
-                @media only screen and (min-width: 1875px){
-                    height: 55vh;
-                }
-            
-                &::-webkit-scrollbar {
-                    width: 0;
-                    height: 0;
-                }
-            
-                &::-webkit-scrollbar-track {
-                    background: transparent;
-                }
-            
-                &::-webkit-scrollbar-thumb {
-                    background-color: transparent;
-                    border-radius: 0;
-                    border: none;
-                }
-            
-                &::-webkit-scrollbar-thumb:hover {
-                    background-color: transparent;
-                }
-                .costOfSalesRegistration_mid_btn_cont{
-                    margin-left: 5%;
-                    display: flex;
-                    gap: 2%;
-                    .body-btn{
-                        margin-top: 15px;
-                        border: 1px solid #808080;
-                        width: 10rem;
-                        height: 30px;
-                        border-radius: 5px !important;
-                        background-color: #fff;
-                        color: #000;
-                    }
-                    .body-btn:hover{
-                        background-color: #808080;
-                        color: #fff;
-                    }
-                    .body-btn-active{
-                        background-color: #808080;
-                        color: #fff;
-                    }
-                }
-                .costOfSalesRegistration_mid_form_cont{
-                    padding: 10px 50px;
-                    .costOfSalesRegistration_form-title{
-                        padding: 10px 0px 9px 23px;
-                        font-weight: bold;
-                        color: #000;
-                    }
-                    .costOfSalesRegistration_form-content.costOfSalesRegistration_form-content-special{
-                        padding: 50px 0px 0px 20px;
-                        }
-                        .costOfSalesRegistration_form-content.costOfSalesRegistration_form-line{
-                            border-top: 4px solid rgb(183, 183, 183);
-                            opacity: 30%;
-                        }
-                        .costOfSalesRegistration_form-content{
-                            padding: 15px 0px 0px 20px;
-                            .costOfSalesRegistration_form-content-div{
-                                display: flex;
-                                .costOfSalesRegistration_calc{
-                                    width: calc(100%/3);
-                                }
-                                .costOfSalesRegistration_left-form-div{
-                                    .costOfSalesRegistration_client-name-div{
-                                        display: flex;
-                                        flex-direction: column;
-                                        margin-bottom: 10px;
-                                        .costOfSalesRegistration_client_name{
-                                            margin-bottom: 5px;
-                                        }
-                                        .costOfSalesRegistration_select-option{
-                                            width: 80%;
-                                            height: 40px;
-                                            border: 1px solid #000;
-                                            border-radius: 10px;
-                                            option{
-                                                text-align: left;
-                                            }
-                                        }
-                                    }
-                                    .costOfSalesRegistration_business_division_name-div{
-                                        display: flex;
-                                        flex-direction: column;
-                                        margin-bottom: 10px;
-                                        .costOfSalesRegistration_business_division_name{
-                                            margin-bottom: 5px;
-                                        }
-                                        input{
-                                            width: 80%;
-                                            height: 40px;
-                                            border: 1px solid #000;
-                                            border-radius: 10px;
-                                        }
-                                    }
-                                    .costOfSalesRegistration_project_name-div{
-                                        display: flex;
-                                        flex-direction: column;
-                                        margin-bottom: 10px;
-                                        .costOfSalesRegistration_project_name{
-                                            margin-bottom: 5px;
-                                        }
-                                        input{
-                                            width: 80%;
-                                            height: 40px;
-                                            border: 1px solid #000;
-                                            border-radius: 10px;
-                                        }
-                                    }
-                                }
-                                .costOfSalesRegistration_middle-form-div{
-                                    .costOfSalesRegistration_net-sales-div{
-                                        display: flex;
-                                        flex-direction: column;
-                                        margin-bottom: 10px;
-                                        .costOfSalesRegistration_net_sales{
-                                            margin-bottom: 5px;
-                                        }
-                                        input{
-                                            width: 80%;
-                                            height: 40px;
-                                            border: 1px solid #000;
-                                            border-radius: 10px;
-                                        }
-                                    }
-                                    .costOfSalesRegistration_cost-of-sales-div{
-                                        display: flex;
-                                        flex-direction: column;
-                                        margin-bottom: 10px;
-                                        .costOfSalesRegistration_cost_of_goods_sold{
-                                            margin-bottom: 5px;
-                                        }
-                                        input{
-                                            width: 80%;
-                                            height: 40px;
-                                            border: 1px solid #000;
-                                            border-radius: 10px;
-                                        }
-                                    }
-                                    .costOfSalesRegistration_personnel-expenses-div{
-                                        display: flex;
-                                        flex-direction: column;
-                                        margin-bottom: 10px;
-                                        .costOfSalesRegistration_personnel_expenses{
-                                            margin-bottom: 5px;
-                                        }
-                                        input{
-                                            width: 80%;
-                                            height: 40px;
-                                            border: 1px solid #000;
-                                            border-radius: 10px;
-                                        }
-                                    }
-                                }
-                                .costOfSalesRegistration_right-form-div{
-                                    .costOfSalesRegistration_non-operating-income-div{
-                                        display: flex;
-                                        flex-direction: column;
-                                        margin-bottom: 10px;
-                                        .costOfSalesRegistration_non_operating_income{
-                                            margin-bottom: 5px;
-                                        }
-                                        input{
-                                            width: 80%;
-                                            height: 40px;
-                                            border: 1px solid #000;
-                                            border-radius: 10px;
-                                        }
-                                    }
-                                    .costOfSalesRegistration_operating-income-div{
-                                        display: flex;
-                                        flex-direction: column;
-                                        margin-bottom: 10px;
-                                        .costOfSalesRegistration_operating_income{
-                                            margin-bottom: 5px;
-                                        }
-                                        input{
-                                            width: 80%;
-                                            height: 40px;
-                                            border: 1px solid #000;
-                                            border-radius: 10px;
-                                        }
-                                    }
-                                    .costOfSalesRegistration_ordinary-income-div{
-                                        display: flex;
-                                        flex-direction: column;
-                                        margin-bottom: 10px;
-                                        .costOfSalesRegistration_ordinary_income{
-                                            margin-bottom: 5px;
-                                        }
-                                        input{
-                                            width: 80%;
-                                            height: 40px;
-                                            border: 1px solid #000;
-                                            border-radius: 10px;
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                        .costOfSalesRegistration_form-content{
-                            .costOfSalesRegistration_plus-btn{
-                                padding: 20px 10px 20px 10px;
-                                gap: 1rem;
-                                display: flex;
-                                margin-left: 90%;
-                                .costOfSalesRegistration_inc,
-                                .costOfSalesRegistration_dec{
-                                    background-color: #808080;
-                                    color: whitesmoke;
-                                    width: 30px;
-                                    height: 40px;
-                                    font-size: 25px;
-                                    border-radius: 5px;
-                                }
-                            }
-                            .costOfSalesRegistration_options-btn{
-                                display: flex;
-                                gap: 1%;
-                                padding: 10px 10px 10px 10px;
-                                align-items: center;
-                                justify-content: center;
-                                button{
-                                    width: 10%;
-                                }
-                            }
-                        }
-                }
-            }
-        }
-    }
+.costSales{
+    max-height: 500px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f1f1f1;
 }
