--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -11,21 +11,13 @@
 @import './dashboard.scss';
 @import './messageAlert.scss';
 @import './projectDataList.scss';
-@import './projectDataRegistration.scss';
+@import './projectDataCreate.scss';
 @import './sidebar.scss';
-@import './employeeExpensesList.scss';
-@import './employeeExpensesRegistration.scss';
+@import './personnelExpensesList.scss';
+@import './personnelExpenseCreate.scss';
 @import './notFound.scss';
 @import './planning.scss';
 @import './tablePlanning.scss';
-@import './costOfSalesRegistration.scss';
-@import './costOfSalesList.scss';
+@import './costofSalesRegistration.scss';
 @import './expensesRegistration.scss';
-@import './Clients/ClientsRegistration.scss';
-@import './Clients/ClientsListAndEdit.scss';
-@import './AlertModal.scss';
-@import './expensesList.scss';
-@import './BusinessDivisions/BusinessDivisionsRegistration.scss';
-@import './BusinessDivisions/BusinessDivisionsListAndEdit.scss';
-
 
