--- a/client/src/assets/scss/projectDataList.scss
+++ b/client/src/assets/scss/projectDataList.scss
@@ -1,6 +1,6 @@
-.projectsList_wrapper{
+.proj_wrapper{
     max-width: 2560px;
-    .projectsList_header_cont{
+    .header_cont{
         margin: 0px 0px 0px 0px;
         height: 60px;
         .header_container{
@@ -9,11 +9,11 @@
             box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
             
         }
-        .projectsList_top_btn_cont{
+        .proj_top_btn_cont{
             margin-left: 5%;
             display: flex;
             justify-content: space-between;
-            .projectsList_header-buttons{
+            .header-buttons{
                 display: flex;
                 gap: 30px;
                 .header-btn{                        
@@ -34,15 +34,14 @@
                     color: #fff;
                 }
             }
-            .projectsList_language-toggle{
+            .language-toggle{
                 gap: 10px;
                 display: flex;
                 padding-right: 50px;
-                align-items: center;
-                .projectsList_pl-label{
+                .pl-label{
                     display: inline-block;
                 }
-                .projectsList_switch{
+                .switch{
                     margin-top: 2px;
                     position: relative;
                     display: inline-block;
@@ -54,19 +53,19 @@
                         width: 0;
                         height: 0;
       
-                        &:checked + .projectsList_slider {
+                        &:checked + .slider {
                           background-color: #2196F3;
                         }
       
-                        &:focus + .projectsList_slider {
+                        &:focus + .slider {
                           box-shadow: 0 0 1px #2196F3;
                         }
       
-                        &:checked + .projectsList_slider:before {
+                        &:checked + .slider:before {
                           transform: translateX(20px);
                         }
                     }
-                    .projectsList_slider{
+                    .slider{
                         position: absolute;
                         cursor: pointer;
                         height: 21px;
@@ -94,13 +93,13 @@
             }
         }
     }
-    .projectsList_cont_wrapper{
+    .projectlist_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
-        .projectsList_sidebar{
+        .sidebar{
             flex: 0 0 205px;
             background-color: #1c302c;
             @media only screen and (max-width: 1000px){
@@ -109,30 +108,30 @@
                 display: none;
             }
         }
-        .projectsList_wrapper{
+        .projectlist_wrapper{
                     width: 100%;
                     height: 100vh;
                     padding: 10px 30px 10px 30px;
-                    .projectsList_top_content{
+                    .proj_top_content{
                         border: 1px solid #fff;
                         border-radius: 5px;
                         background-color: #fff;
-                        .projectsList_top_body_cont{
+                        .proj_top_body_cont{
                             background-color: #fff;
                             height: 4rem;
                         }
-                        button.projectsList_mode_switch {
+                        button.mode_switch {
                             border: 1px solid;
                             padding: 3px 21px;
                             border-radius: 5px;
                             font-weight: 500;
                             background-color: #f3f3f3;
                         }
-                        .projectsList_mode_switch_datalist{
+                        .mode_switch_datalist{
                             float: right;
                             padding: 40px 70px;
                         }
-                        button.projectsList_edit_submit_btn {
+                        button.edit_submit_btn {
                             border: 2px solid #fdd7b3;
                             padding: 2px 13px;
                             border-radius: 7px;
@@ -140,9 +139,9 @@
                             background: #2e2eff;
                             color: white;
                         }
-                        .projectsList_mid_body_cont{
+                        .proj_mid_body_cont{
                             height: 87vh;
-                            .projectsList_mid_btn_cont{
+                            .proj_mid_btn_cont{
                                 margin-left: 5%;
                                 display: flex;
                                 gap: 2%;
@@ -164,16 +163,16 @@
                                     color: #fff;
                                 }
                             }
-                            .projectsList_title_table_cont{
+                            .proj_title_table_cont{
                                         display: flex;
                                         gap: 8%;
                                         padding: 40px 70px;
-                                        .projectsList_title{
+                                        .proj_title{
                                             letter-spacing: 2px;
                                             font-weight: bold;
                                             color: #000;
                                         }
-                                        .projectsList_btn{
+                                        .proj_btn{
                                             border: 1px solid #808080;
                                             width: 12rem;
                                             height: 35px;
@@ -183,7 +182,7 @@
                                             margin-left: 14px;
                                         }
                             }
-                            .projectsList_table_wrapper{
+                            .proj_table_wrapper{
                                 width: 100%;
                                 height: 50vh;
                                 overflow-y: auto; 
@@ -211,21 +210,21 @@
                                 &::-webkit-scrollbar-thumb:hover {
                                     background-color: transparent;
                                 }
-                                .projectsList_table_cont{
+                                .proj_table_cont{
                                     padding: 0px 0px 0px 70px;
                                     .table{
                                         width: 97%;
-                                        .projectsList_table_title{
+                                        .proj_table_title{
                                             text-align: center;
                                             background-color: #808080;
-                                            .projectsList_table_title_content_vertical{
+                                            .proj_table_title_content_vertical{
                                                 color: #fff;
                                                 border: none;
                                                 font-size: 14px;
                                             }
                                         }
-                                        .projectsList_table_body{
-                                            .projectsList_table_body_content_horizantal{
+                                        .proj_table_body{
+                                            .proj_table_body_content_horizantal{
                                                 border: none;
                                                 &:nth-child(odd){
                                                     background-color: #f9f9f9;
@@ -233,7 +232,7 @@
                                                 &:nth-child(even){
                                                     background-color: #e0e0e0;
                                                 }
-                                                .projectsList_table_body_content_vertical{
+                                                .proj_table_body_content_vertical{
                                                     border: none;
                                                     text-align: center;
                                                 }
@@ -242,9 +241,9 @@
                                     }
                                 }
                             }
-                            .projectsList_pagination_wrapper{
+                            .proj_pagination_wrapper{
                                 // margin-top: 220px;
-                                .projectsList_pagination_cont{
+                                .proj_pagination_cont{
                                     display: flex;
                                     justify-content: flex-end;
                                     padding: 20px 20px 0px 20px;
