--- a/client/src/assets/scss/personnelExpensesList.scss
+++ b/client/src/assets/scss/personnelExpensesList.scss
@@ -1,6 +1,6 @@
-.employeeExpensesList_wrapper{
+.personnel_wrapper{
     max-width: 2560px;
-    .employeeExpensesList_header_cont{
+    .header_cont{
         margin: 0px 0px 0px 0px;
         height: 60px;
         .header_container{
@@ -8,11 +8,11 @@
             padding: 5px 5px 10px 5px;
             box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
         }
-        .employeeExpensesList_top_btn_cont{
+        .personnel_top_btn_cont{
             margin-left: 5%;
             display: flex;
             justify-content: space-between;
-            .employeeExpensesList_header-buttons{
+            .header-buttons{
                 display: flex;
                 gap: 30px;
                 .header-btn{                        
@@ -33,15 +33,14 @@
                     color: #fff;
                 }
             }
-            .employeeExpensesList_language-toggle{
+            .language-toggle{
                 gap: 10px;
                 display: flex;
                 padding-right: 50px;
-                align-items: center;
-                .employeeExpensesList_pl-label{
+                .pl-label{
                     display: inline-block;
                 }
-                .employeeExpensesList_switch{
+                .switch{
                     margin-top: 2px;
                     position: relative;
                     display: inline-block;
@@ -53,19 +52,19 @@
                         width: 0;
                         height: 0;
       
-                        &:checked + .employeeExpensesList_slider {
+                        &:checked + .slider {
                           background-color: #2196F3;
                         }
       
-                        &:focus + .employeeExpensesList_slider {
+                        &:focus + .slider {
                           box-shadow: 0 0 1px #2196F3;
                         }
       
-                        &:checked + .employeeExpensesList_slider:before {
+                        &:checked + .slider:before {
                           transform: translateX(20px);
                         }
                     }
-                    .employeeExpensesList_slider{
+                    .slider{
                         position: absolute;
                         cursor: pointer;
                         height: 21px;
@@ -93,13 +92,13 @@
             }
         }
     }
-    .employeeExpensesList_cont_wrapper{
+    .personnel_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
-        .employeeExpensesList_sidebar{
+        .sidebar{
             flex: 0 0 205px;
             background-color: #1c302c;
             @media only screen and (max-width: 1000px){
@@ -108,18 +107,18 @@
                 display: none;
             }
         }
-        .employeeExpensesList_wrapper_div{
+        .personnel_wrapper_div{
                     width: 100%;
                     height: 100vh;
                     padding: 10px 30px 10px 30px;
-                    .employeeExpensesList_top_content{
+                    .personnel_top_content{
                         border: 1px solid #fff;
                         border-radius: 5px;
                         background-color: #fff;
-                        .employeeExpensesList_top_body_cont{
+                        .personnel_top_body_cont{
                             background-color: #fff;
                             height: 4rem;
-                            .employeeExpensesList_top_btn_cont{
+                            .personnel_top_btn_cont{
                                 margin-left: 5%;
                                 display: flex;
                                 gap: 2%;
@@ -142,9 +141,9 @@
                                 }
                             }
                         }
-                        .employeeExpensesList_mid_body_cont{
+                        .personnel_mid_body_cont{
                             height: 87vh;
-                            .employeeExpensesList_mid_btn_cont{
+                            .personnel_mid_btn_cont{
                                 margin-left: 5%;
                                 display: flex;
                                 gap: 2%;
@@ -166,16 +165,16 @@
                                     color: #fff;
                                 }
                             }
-                            .employeeExpensesList_title_table_cont{
+                            .personnel_title_table_cont{
                                         display: flex;
                                         gap: 8%;
                                         padding: 40px 70px;
-                                        .employeeExpensesList_title{
+                                        .personnel_title{
                                             letter-spacing: 2px;
                                             font-weight: bold;
                                             color: #000;
                                         }
-                                        .employeeExpensesList_btn{
+                                        .personnel_btn{
                                             border: 1px solid #808080;
                                             width: 12rem;
                                             height: 35px;
@@ -185,9 +184,9 @@
                                             margin-left: 14px;
                                         }
                             }
-                            .employeeExpensesList_table_wrapper{
+                            .personnel_table_wrapper{
                                 width: 100%;
-                                height: 60vh;
+                                height: 50vh;
                                 overflow-y: auto; 
                                 overflow-x: hidden;
                                 scrollbar-width: none;
@@ -213,20 +212,20 @@
                                 &::-webkit-scrollbar-thumb:hover {
                                     background-color: transparent;
                                 }
-                                .employeeExpensesList_table_cont{
+                                .personnel_table_cont{
                                     padding: 0px 0px 0px 70px;
                                     .table{
                                         width: 97%;
-                                        .employeeExpensesList_table_title{
+                                        .personnel_table_title{
                                             background-color: #808080;
-                                            .employeeExpensesList_table_title_content_vertical{
+                                            .personnel_table_title_content_vertical{
                                                 color: #fff;
                                                 border: none;
                                                 font-size: 14px;
                                             }
                                         }
-                                        .employeeExpensesList_table_body{
-                                            .employeeExpensesList_user_name{
+                                        .personnel_table_body{
+                                            .user_name{
                                                 &:nth-child(odd){
                                                     background-color: #f9f9f9;
                                                 }
@@ -234,16 +233,16 @@
                                                     background-color: #e0e0e0;
                                                 }
                                             }
-                                            .employeeExpensesList_txt0{
+                                            .txt0{
                                                 margin-bottom: 5px;
                                                 text-align: center;
                                                 font-size: 14px;
                                             }
-                                            .employeeExpensesList_txt1_txt2_flex{
+                                            .txt1_txt2_flex{
                                                 margin-top: 20px;
                                                 display: flex;
                                                 flex-direction: column;
-                                                .employeeExpensesList_txt1{
+                                                .txt1{
                                                     font-size: 10px;
                                                     padding: 5px 0px;
                                                     background-color: #C6D4E7;
@@ -255,18 +254,18 @@
                                                         font-size: 10px;
                                                     }
                                                 }
-                                                .employeeExpensesList_txt2{
+                                                .txt2{
                                                     margin-left: 5px;
                                                     font-size: 10px;
                                                     padding: 5px 0px;
                                                     text-align: center;
                                                 }
                                             }
-                                            .employeeExpensesList_txt3_txt4_flex{
+                                            .txt3_txt4_flex{
                                                 margin-top: 30px;
                                                 display: flex;
                                                 flex-direction: column;
-                                                .employeeExpensesList_txt3{
+                                                .txt3{
                                                     font-size: 12px;
                                                     padding: 5px 0px;
                                                     background-color: #C6D4E7;
@@ -278,7 +277,7 @@
                                                         font-size: 10px;
                                                     }
                                                 }
-                                                .employeeExpensesList_txt4{
+                                                .txt4{
                                                     margin-left: 5px;
                                                     font-size: 12px;
                                                     padding: 5px 0px;
@@ -289,8 +288,8 @@
                                     }
                                 }
                             }
-                            .employeeExpensesList_pagination_wrapper{
-                                .employeeExpensesList_pagination_cont{
+                            .personnel_pagination_wrapper{
+                                .personnel_pagination_cont{
                                     display: flex;
                                     justify-content: flex-end;
                                     padding: 20px 20px 0px 20px;
